# SilenceArc

./: .gitignore  CMakeLists.txt  CMakeLists.txt.tmp  README.md  WHITE_PAPER.md  df.dll.lib  gemini.md  run.bat  setup_intel.bat  sycl-integration.md
DeepFilterNet/libDF/: Cargo.toml
DeepFilterNet/libDF/src/: capi.rs  gpu_bridge.rs  lib.rs  tract.rs
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/deepfilter_integration_20260308/: metadata.json  plan.md  spec.md
conductor/archive/df-integration_20260311/: metadata.json
conductor/archive/e2e_samples_20260308/: metadata.json  spec.md
conductor/archive/real-time-telemetry_20260310/: index.md  plan.md  spec.md
conductor/tracks/deep-docs_20260309/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/deepfilter_integration_20260308/: index.md  plan.md
conductor/tracks/df-integration_20260311/: index.md  plan.md  spec.md
conductor/tracks/e2e_samples_20260308/: index.md  plan.md
conductor/tracks/intel-arc-gpu-sycl_20260309/: SYCL_PROGRESS.md  index.md  metadata.json  plan.md  spec.md
conductor/tracks/model_selection_20260308/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/real-time-telemetry_20260310/: metadata.json
conductor/tracks/ui_implementation_20260308/: index.md  metadata.json  plan.md  spec.md
docs/: ARCHITECTURE.md  ENGINE.md  PHILOSOPHY.md  SETUP.md  USAGE.md
docs/adr/: 001-model-selection.md
include/: benchmark_harness.h  deep_filter.h
include/silence_arc/domain/: audio_metrics.h  audio_pipeline.h  audio_stream_buffer.h  gpu_accelerator.h  neural_network.h  noise_suppressor.h  telemetry_provider.h  ui_state.h
include/silence_arc/infrastructure/: async_audio_pipeline.h  deep_filter_adapter.h  miniaudio_device_manager.h  miniaudio_pipeline.h  mock_telemetry_provider.h  onednn_inference_engine.h  sycl_accelerator.h  sycl_noise_suppressor.h  sycl_telemetry_provider.h  ui_manager.h  wav_loader.h
models/df3_weights/: metadata.json
scripts/: export_df3_weights.py
src/: benchmark_harness.cpp  main.cpp
src/infrastructure/: async_audio_pipeline.cpp  deep_filter_adapter.cpp  deep_filter_stub.c  miniaudio_device_manager.cpp  miniaudio_pipeline.cpp  onednn_inference_engine.cpp  sycl_accelerator.cpp  sycl_noise_suppressor.cpp  sycl_telemetry_provider.cpp  ui_manager.cpp
tests/: sycl_test_harness.h  test_audio_pipeline.cpp  test_audio_stream_buffer.cpp  test_benchmark_harness.cpp  test_e2e_loopback.cpp  test_e2e_samples.cpp  test_gpu_bridge.cpp  test_kernel_correctness.cpp  test_nn_layers.cpp  test_noise_suppression.cpp  test_sycl_discovery.cpp  test_telemetry_provider.cpp  test_ui_manager.cpp
tests/utils/: audio_gen.h
